environments/gloo-gateway/gateway-api/live/gloo-portal-demo/base/solo-dev-portal/routes/portal-frontend-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: portal-frontend-route
  namespace: gloo-system
spec:
  parentRefs:
    - name: https
      namespace: gloo-system
  hostnames:
    - solo-dev-portal.gwapi.glooplatform.com
  rules:
    - backendRefs:
        - name: portal-frontend
          namespace: gloo-system
          port: 4000
      matches:
      - path:
          type: PathPrefix
          value: /
    - backendRefs:
        - name: portal-frontend
          namespace: gloo-system
          port: 4000
      matches:
      - path:
          type: PathPrefix
          value: /v1/login
      - path:
          type: PathPrefix
          value: /v1/logout
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.solo.io
            kind: RouteOption
            name: portal-frontend-auth-policy
